# btctry-deta

./: .env-example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  coindesk.py  main.py  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: acceptance-test.yml  test-btctry.yml
btctry/configs/: __init__.py  app.py  deta.py
btctry/utils/: __init__.py  coindesk.py  coingecko.py
tests/: test_coindesk.py
tests/acceptance/: test_coingecko.py
tests/unit/: test_deta.py  test_dummy.py
