[metadata]
name = btctry_deta
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7

[flake8]
extend-ignore =
    E203,E501

[tool:pytest]
addopts = -v --color=yes --cov=btctry --cov-report term-missing
testpaths = tests
